k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-app
  labels:
    name: restaurant-app
    environment: production
