k8s/db-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: restaurant-app
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
     app: mysql
  template:
   metadata:
    labels:
     app: mysql
   spec:
    containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        name: mysql
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
        exec:
          command:
            - mysqladmin
            - ping
            - -h
            - 127.0.0.1
        initialDelaySeconds: 60
        periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - mysqladmin
            - ping
            - -h
            - 127.0.0.1
          initialDelaySeconds: 30
          periodSeconds: 10
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp3
      resources:
        requests:
          storage: 10Gi
