k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: restaurant-app
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
      app: mysql
